--- a/PhotoDrop/Settings.storyboard
+++ b/PhotoDrop/Settings.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Settings View Controller-->
         <scene sceneID="m7X-uN-xNC">
             <objects>
-                <viewController id="vm1-1C-dbp" sceneMemberID="viewController">
+                <viewController id="vm1-1C-dbp" customClass="SettingsViewController" customModule="PhotoDrop" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="U0M-yT-6qV"/>
                         <viewControllerLayoutGuide type="bottom" id="UqK-2g-z2N"/>
@@ -20,6 +20,16 @@
                     <view key="view" contentMode="scaleToFill" id="nym-HV-tYz">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eua-st-Jch">
+                                <rect key="frame" x="71" y="45" width="34" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Back"/>
+                                <connections>
+                                    <action selector="backButtonTapped:" destination="vm1-1C-dbp" eventType="touchUpInside" id="2EB-IO-TzL"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
