--- a/PhotoDrop/DropPreview.storyboard
+++ b/PhotoDrop/DropPreview.storyboard
@@ -23,7 +23,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FoO-eI-87W">
-                                <rect key="frame" x="22" y="20" width="34" height="30"/>
+                                <rect key="frame" x="16" y="20" width="34" height="30"/>
                                 <state key="normal" title="Back"/>
                                 <connections>
                                     <action selector="backButtonTapped:" destination="lnm-mR-zJS" eventType="touchUpInside" id="GPh-qB-R9s"/>
@@ -32,7 +32,7 @@
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ame-RJ-Myd">
                                 <rect key="frame" x="139" y="86" width="97" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="97" id="KEF-zc-vla"/>
+                                    <constraint firstAttribute="width" constant="97" id="qLs-Ia-7tY"/>
                                 </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -47,7 +47,7 @@
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="h3y-yo-DR5">
                                 <rect key="frame" x="83" y="214" width="97" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="97" id="HQI-tc-gxr"/>
+                                    <constraint firstAttribute="width" constant="97" id="xV3-zW-cIb"/>
                                 </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -72,43 +72,51 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jtw-c9-Cqg">
-                                <rect key="frame" x="172" y="252" width="31" height="30"/>
+                                <rect key="frame" x="328" y="20" width="31" height="30"/>
                                 <state key="normal" title="Post"/>
                                 <connections>
                                     <action selector="postButtonTapped:" destination="lnm-mR-zJS" eventType="touchUpInside" id="KFN-tA-iAm"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="C53-sZ-5Ka">
+                                <rect key="frame" x="51" y="282" width="273" height="310"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Hzx-Rb-R5R" firstAttribute="centerX" secondItem="gZW-fA-gHm" secondAttribute="centerX" id="5eY-6c-P3N"/>
-                            <constraint firstItem="3YR-b3-Rs9" firstAttribute="top" secondItem="ame-RJ-Myd" secondAttribute="bottom" constant="69" id="7Q6-uF-bhg"/>
-                            <constraint firstItem="gPK-1o-3fj" firstAttribute="leading" secondItem="h3y-yo-DR5" secondAttribute="trailing" constant="23" id="Gu3-it-zJ8"/>
-                            <constraint firstItem="3YR-b3-Rs9" firstAttribute="leading" secondItem="gZW-fA-gHm" secondAttribute="leadingMargin" constant="94" id="IwG-dz-Awr"/>
-                            <constraint firstItem="ame-RJ-Myd" firstAttribute="centerX" secondItem="Jtw-c9-Cqg" secondAttribute="centerX" id="Khl-Mo-sJV"/>
-                            <constraint firstItem="h3y-yo-DR5" firstAttribute="leading" secondItem="gZW-fA-gHm" secondAttribute="leadingMargin" constant="67" id="MeG-WI-IQQ"/>
-                            <constraint firstItem="FoO-eI-87W" firstAttribute="top" secondItem="Lb1-jx-JC0" secondAttribute="bottom" id="RxV-U1-A7d"/>
-                            <constraint firstItem="Hzx-Rb-R5R" firstAttribute="top" secondItem="Lb1-jx-JC0" secondAttribute="bottom" constant="37" id="SU9-iW-ksu"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="gPK-1o-3fj" secondAttribute="trailing" constant="59" id="Vq6-bO-y3f"/>
-                            <constraint firstItem="h3y-yo-DR5" firstAttribute="top" secondItem="3YR-b3-Rs9" secondAttribute="bottom" constant="8" symbolic="YES" id="ZHd-s8-RR4"/>
-                            <constraint firstItem="FoO-eI-87W" firstAttribute="leading" secondItem="gZW-fA-gHm" secondAttribute="leadingMargin" constant="6" id="bGo-6u-ROo"/>
-                            <constraint firstItem="h3y-yo-DR5" firstAttribute="baseline" secondItem="gPK-1o-3fj" secondAttribute="baseline" id="dqe-j9-h7s"/>
-                            <constraint firstItem="Kf1-0f-mO9" firstAttribute="leading" secondItem="3YR-b3-Rs9" secondAttribute="trailing" constant="81" id="gNn-5k-MjB"/>
-                            <constraint firstItem="Jtw-c9-Cqg" firstAttribute="top" secondItem="h3y-yo-DR5" secondAttribute="bottom" constant="8" symbolic="YES" id="peB-PL-EKM"/>
-                            <constraint firstItem="Hzx-Rb-R5R" firstAttribute="centerX" secondItem="ame-RJ-Myd" secondAttribute="centerX" id="pui-UX-TcW"/>
-                            <constraint firstItem="ame-RJ-Myd" firstAttribute="top" secondItem="Hzx-Rb-R5R" secondAttribute="bottom" constant="8" symbolic="YES" id="qm1-bf-47r"/>
-                            <constraint firstItem="3YR-b3-Rs9" firstAttribute="baseline" secondItem="Kf1-0f-mO9" secondAttribute="baseline" id="zRM-VO-59P"/>
+                            <constraint firstItem="Hzx-Rb-R5R" firstAttribute="top" secondItem="Lb1-jx-JC0" secondAttribute="bottom" constant="37" id="0jE-27-lHw"/>
+                            <constraint firstItem="C53-sZ-5Ka" firstAttribute="top" secondItem="h3y-yo-DR5" secondAttribute="bottom" constant="38" id="9k4-OU-hrk"/>
+                            <constraint firstItem="Jtw-c9-Cqg" firstAttribute="trailing" secondItem="gZW-fA-gHm" secondAttribute="trailingMargin" id="Ahx-LS-Zfg"/>
+                            <constraint firstItem="Hzx-Rb-R5R" firstAttribute="centerX" secondItem="ame-RJ-Myd" secondAttribute="centerX" id="Clc-EO-4bs"/>
+                            <constraint firstItem="FoO-eI-87W" firstAttribute="baseline" secondItem="Jtw-c9-Cqg" secondAttribute="baseline" id="KV2-qk-S2e"/>
+                            <constraint firstItem="Kf1-0f-mO9" firstAttribute="leading" secondItem="3YR-b3-Rs9" secondAttribute="trailing" constant="81" id="MsU-oT-x3A"/>
+                            <constraint firstItem="gPK-1o-3fj" firstAttribute="leading" secondItem="h3y-yo-DR5" secondAttribute="trailing" constant="23" id="OR1-SN-UG2"/>
+                            <constraint firstItem="h3y-yo-DR5" firstAttribute="leading" secondItem="gZW-fA-gHm" secondAttribute="leadingMargin" constant="67" id="PDj-NA-HnY"/>
+                            <constraint firstItem="ame-RJ-Myd" firstAttribute="centerX" secondItem="C53-sZ-5Ka" secondAttribute="centerX" id="RdA-BB-oCB"/>
+                            <constraint firstItem="h3y-yo-DR5" firstAttribute="top" secondItem="3YR-b3-Rs9" secondAttribute="bottom" constant="8" symbolic="YES" id="UOv-LD-yQN"/>
+                            <constraint firstItem="Hzx-Rb-R5R" firstAttribute="centerX" secondItem="gZW-fA-gHm" secondAttribute="centerX" id="X0X-TA-Dcx"/>
+                            <constraint firstItem="C53-sZ-5Ka" firstAttribute="leading" secondItem="gZW-fA-gHm" secondAttribute="leadingMargin" constant="35" id="XGG-EO-drX"/>
+                            <constraint firstItem="3YR-b3-Rs9" firstAttribute="baseline" secondItem="Kf1-0f-mO9" secondAttribute="baseline" id="Z43-mm-2Mh"/>
+                            <constraint firstItem="3YR-b3-Rs9" firstAttribute="leading" secondItem="gZW-fA-gHm" secondAttribute="leadingMargin" constant="94" id="ads-ln-Qc4"/>
+                            <constraint firstItem="ame-RJ-Myd" firstAttribute="top" secondItem="Hzx-Rb-R5R" secondAttribute="bottom" constant="8" symbolic="YES" id="dq8-G2-LJk"/>
+                            <constraint firstItem="FoO-eI-87W" firstAttribute="leading" secondItem="gZW-fA-gHm" secondAttribute="leadingMargin" id="dvf-3b-XJE"/>
+                            <constraint firstItem="FoO-eI-87W" firstAttribute="top" secondItem="Lb1-jx-JC0" secondAttribute="bottom" id="g1m-pg-Erg"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="gPK-1o-3fj" secondAttribute="trailing" constant="59" id="hDE-ft-CHu"/>
+                            <constraint firstItem="3YR-b3-Rs9" firstAttribute="top" secondItem="ame-RJ-Myd" secondAttribute="bottom" constant="69" id="vUu-bj-DhW"/>
+                            <constraint firstItem="HJ6-f6-vGB" firstAttribute="top" secondItem="C53-sZ-5Ka" secondAttribute="bottom" constant="75" id="xEc-pe-0Dj"/>
+                            <constraint firstItem="h3y-yo-DR5" firstAttribute="baseline" secondItem="gPK-1o-3fj" secondAttribute="baseline" id="yCp-eo-iKj"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="latitudeTextField" destination="gPK-1o-3fj" id="srn-1Z-ODc"/>
                         <outlet property="longitudeTextField" destination="h3y-yo-DR5" id="AiL-hL-kIa"/>
+                        <outlet property="previewImage" destination="C53-sZ-5Ka" id="32I-jK-YX5"/>
                         <outlet property="titleTextField" destination="ame-RJ-Myd" id="MF5-0K-w0x"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OA0-IN-DYW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="105" y="-62"/>
+            <point key="canvasLocation" x="104.8" y="-62.518740629685162"/>
         </scene>
     </scenes>
 </document>
